Migrated database from MongoDB to PostgreSQL
I was not fully utilizing the embedding and non-relational features of MongoDB,
so I decided to migrate to PostgreSQL and reimplment the models and views
using SQLAlchemy and Marshmallow.

Squashed commit of the following:

commit 6b11733eba2e3cb969007eb5bfab70f0707a8a41
Author: pedroivo000 <pedroivo000@gmail.com>
Date:   Wed Apr 29 10:05:06 2020 +0200

    feat: added partial models and views for bullets and tasks.

commit 224213c0f2d7b662503045fd8307b6e22856018d
Author: pedroivo000 <pedroivo000@gmail.com>
Date:   Sun Apr 12 15:55:57 2020 +0200

    feat: refactor app to use Flask App factory pattern

commit 9949c2b111ff408017736de81b22b2d5bdc2429d
Author: pedroivo000 <pedroivo000@gmail.com>
Date:   Sun Apr 12 11:14:26 2020 +0200

    feat: changed docker-compose file to use Postgres

commit 3abab5462bcbdfac1bc18f042b38e67a7b179b37
Author: Guimaraes, Pedro Ivo {PXIW~Penzberg} <pedro_ivo.guimaraes@roche.com>
Date:   Tue Apr 7 23:20:36 2020 +0200

    Initial refactor to use Postgres
