# views/projects.py
@@ -1,18 +1,0 @@
-def get_projects(**kwargs):
-    pass
-
-
-def create_project(**kwargs):
-    pass
-
-
-def update_project(**kwargs):
-    pass
-
-
-def get_project(project_id):
-    pass
-
-
-def delete_project(project_id):
-    pass
